--- a/polls/templates/tourbest/index.html
+++ b/polls/templates/tourbest/index.html
@@ -1,19 +1,19 @@
 
 
-{% extends "polls/dashboard.html"  %}
+{% extends "tourbest/dashboard.html" %}
 {% block page %}
    <div class="container">
         {% if user.is_authenticated %}
-        <a href="{% url 'polls:logout' %}">Logout</a><br />
+        <a href="{% url 'tourbest:logout' %}">Logout</a><br />
         {% else %}
-        <a href="{% url "polls:register" %}">Register Here</a><br />
-        <a href="{% url "polls:login" %}">Login</a><br />
+        <a href="{% url "tourbest:register" %}">Register Here</a><br />
+        <a href="{% url "tourbest:login" %}">Login</a><br />
         {% endif %}
 
         {% if latest_question_list %}
             <ul>
             {% for question in latest_question_list %}
-                <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+                <li><a href="{% url 'tourbest:detail' question.id %}">{{ question.question_text }}</a></li>
             {% endfor %}
             </ul>
         {% else %}
