login moved to dashboard

--- a/polls/templates/tourbest/base.html
+++ b/polls/templates/tourbest/base.html
@@ -3,7 +3,7 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <title>Yet another trip manager</title>
+        <title>Tour Best</title>
 
         <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'polls/dashboard.css' %}" />
