--- a/polls/templates/tourbest/dashboard.html
+++ b/polls/templates/tourbest/dashboard.html
@@ -54,14 +54,16 @@
 
                             </ul>
                             <div class="collapse nav navbar-nav nav-collapse" id="nav-collapse2">
-                                <form class="navbar-form navbar-right form-inline" role="form">
+                                <form id="login_form" method="post" action="/tourbest/login/"
+                                 class="navbar-form navbar-right form-inline" role="form">
+                                    {% csrf_token %}
                                     <div class="form-group">
                                         <label class="sr-only" for="Email">Email</label>
-                                        <input type="email" class="form-control" id="Email" placeholder="Email" autofocus required />
+                                        <input type="text" class="form-control" name="username" placeholder="Username" autofocus required />
                                     </div>
                                     <div class="form-group">
                                         <label class="sr-only" for="Password">Password</label>
-                                        <input type="password" class="form-control" id="Password" placeholder="Password" required />
+                                        <input type="password" class="form-control" name="password" placeholder="Password" required />
                                     </div>
                                     <button type="submit" class="btn btn-success">Sign in</button>
                                 </form>
