--- a/tourbest/templates/tourbest/detail.html
+++ b/tourbest/templates/tourbest/detail.html
@@ -1,2 +1,10 @@
+{% extends 'tourbest/dashboard.html' %}
+{% block page %}
+<div class="container">
 
+<h1 >{{ tour.description }}</h1>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+</div>
+
+{% endblock %}
