--- a/tourbest/templates/tourbest/index.html
+++ b/tourbest/templates/tourbest/index.html
@@ -14,6 +14,8 @@
             <ul>
             {% for tour in tour_list %}
                 <li><a href="{% url 'tourbest:detail' tour.id %}">{{ tour.description }}</a></li>
+                <li><a href="{% url 'tourbest:book' tour.id %}"> Book! </a></li>
+
             {% endfor %}
             </ul>
         {% else %}
