--- a/tourbest/templates/tourbest/index.html
+++ b/tourbest/templates/tourbest/index.html
@@ -1,15 +1,19 @@
 
 
 {% extends "tourbest/dashboard.html" %}
+{% load i18n %}
+
 {% block page %}
    <div class="container">
+
+
         {% if user.is_authenticated %}
         <a href="{% url 'tourbest:logout' %}">Logout</a><br />
         {% else %}
         <a href="{% url "tourbest:register" %}">Register Here</a><br />
         <a href="{% url "tourbest:login" %}">Login</a><br />
         {% endif %}
-
+            {% trans "This is the title." %}
         {% if tour_list %}
             <ul>
             {% for tour in tour_list %}
