--- a/tourbest/templates/tourbest/dashboard.html
+++ b/tourbest/templates/tourbest/dashboard.html
@@ -21,17 +21,13 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Brand</a>
+                            <a class="navbar-brand" href="{% url 'tourbest:index' %}">Tour BEST!</a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar-collapse-2">
                             <ul class="nav navbar-nav navbar-right" >
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Works</a></li>
-                                <li><a href="#">News</a></li>
+                                <li><a href="{% url 'tourbest:index' %}">Home</a></li>
                                 <li><a href="#">Contact</a></li>
                                 <li>
                                     <a class="pop-up-link"
@@ -39,19 +35,27 @@
                                        aria-expanded="false"
                                        aria-controls="nav-collapse3">Search</a>
                                 </li>
-                                <li>
-                                    <a class="pop-up-link"
-                                       data-toggle="collapse" href="#nav-collapse2"
-                                       aria-expanded="false"
-                                       aria-controls="nav-collapse2">Sign in</a>
+                                {% if user.is_authenticated %}
+                                    <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                         {{ user.username }} <span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#">My profile</a></li>
+                                        <li><a href="#">Favorited</a></li>
+                                        <li><a href="#">Settings</a></li>
+                                        <li class="divider"></li>
+                                        <li><a href="{% url 'tourbest:logout' %}">Logout</a></li>
+                                    </ul>
                                 </li>
-                                <li>
-                                    <a class="pop-up-link"
-                                       data-toggle="collapse" href="#nav-collapse4"
-                                       aria-expanded="false"
-                                       aria-controls="nav-collapse4">Profile</a>
-                                </li>
-
+                                {% else %}
+                                    <li>
+                                        <a class="pop-up-link"
+                                           data-toggle="collapse" href="#nav-collapse2"
+                                           aria-expanded="false"
+                                           aria-controls="nav-collapse2">Sign in</a>
+                                    </li>
+                                    <li><a href="{% url "tourbest:register" %}">Register Here</a></li>
+                                {% endif %}
                             </ul>
                             <div class="collapse nav navbar-nav nav-collapse" id="nav-collapse2">
                                 <form id="login_form" method="post" action="/tourbest/login/"
@@ -88,7 +92,7 @@
                                         <li><a href="#">Favorited</a></li>
                                         <li><a href="#">Settings</a></li>
                                         <li class="divider"></li>
-                                        <li><a href="#">Logout</a></li>
+                                        <li><a href="{% url 'tourbest:logout' %}">Logout</a></li>
                                     </ul>
                                 </li>
                             </ul>
