--- a/tourbest/templates/tourbest/detail.html
+++ b/tourbest/templates/tourbest/detail.html
@@ -1,10 +1,14 @@
 {% extends 'tourbest/dashboard.html' %}
 {% block page %}
-<div class="container">
 
-<h1 >{{ tour.description }}</h1>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    <div class="container">
+<form class="tour-form" method="post" action="{% url 'tourbest:book' tour.id %}">
+    <h5 class="tour-style" >{{ tour.description }}</h5>
+    <h5 class="tour-description" >{{ tour.description }}</h5>
 
+      <button class="btn btn-success">Book!</button>
+</form>
 </div>
 
 {% endblock %}
